// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/WMarker Should be render correctly 1`] = `
<g>
  <line stroke="#333333" stroke-width="1" stroke-dasharray="0" fill="none" x1="40" y1="[object Object]" x2="580" y2="[object Object]"></line> <text text-anchor="end" x="575" y="[object Object]" dy="-10" style="fill: #333333; font-size: 14;">

  </text>
</g>
`;

exports[`Components/WMarker Should be render correctly with x type 1`] = `
<g>
  <line stroke="#333333" stroke-width="1" stroke-dasharray="0" fill="none" x1="-190" y1="10" x2="-190" y2="376"></line> <text text-anchor="end" x="-195" y="10" dy="15" style="fill: #333333; font-size: 14;">

  </text>
</g>
`;
